@@ -1,5 +1,4 @@
 // -*- C++ -*-
-//
 // $Id$
 
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
